--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -296,12 +296,10 @@ footer p {
         height: auto;
       }
 
-  #join {
-    position: absolute;
+  #join  .btn{
     left: 50%; /* Changed left position to 50% for better centering */
     transform: translate(-50%, -50%);
     background-color: #4d0428cc;
-    color: #fff;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
