--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -410,13 +410,12 @@ footer p {
   .hero-content {
     width: 100%;
     height: auto;
-    padding-left: 0;
   }
  
   .hero-content p {
     width: 100%;
     height: auto;
-    padding-left: 0;
+    font-size: 16px;
   }
   nav a:hover {
     background-color: #555;
