--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -416,6 +416,8 @@ footer p {
     width: 100%;
     height: auto;
     font-size: 16px;
+    margin: auto;
+    margin-right: 5px;
   }
   nav a:hover {
     background-color: #555;
