--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -24,7 +24,7 @@ header {
 }
 
   h1 {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     margin-left: 20px;
     font-family: cursive;
     color: #00698f;
@@ -230,7 +230,7 @@ footer p {
 }
 
 .membership-cards {
-    padding-top: 0;
+    padding-top: 30px;
 }
 .card {
     margin-bottom: 40px;
@@ -397,12 +397,6 @@ display: none;
     .facebook, .twitter, .instagram {
       width: 40px;
       height: 40px;
-    }
-   
-  
-  
-    .both-container {
-      display: block;
     }
 
 
