--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -271,8 +271,7 @@ footer p {
 .thank-you {
     background-color: #C0C0C0;
     font-size: 18px;
-    padding: 20px;
-        text-align: center;
+    padding-left: 20px;
 
 }
 
