--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -240,6 +240,7 @@ footer p {
   background-color: #eecece; 
     height: 90px;
     border-radius: 10px;
+    animation-delay: 0.2s;
 
 
 }
@@ -248,6 +249,7 @@ footer p {
   background-color: #cd7f32; 
     height: 90px;
     border-radius: 10px;
+    animation-delay: 0.4s;
 
 }
 
@@ -256,6 +258,7 @@ footer p {
   background-color: #C0C0C0; 
   height: 90px;
   border-radius: 10px;
+  animation-delay: 0.6s;
 
 }
 
@@ -264,6 +267,7 @@ footer p {
   background-color: #ffd700; 
     height: 90px;
     border-radius: 10px;
+    animation-delay: 0.8s;
 
 
 }
@@ -316,6 +320,20 @@ display: none;
   padding: 0px;
   width: 600px;
   height: 20px;
+}
+.card {
+  animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @media (max-width: 768px) {
