--- a/finalproject/styles/eventify.css
+++ b/finalproject/styles/eventify.css
@@ -83,3 +83,23 @@ h2{
     background-color: #36454f;
     color: #f9f9f9;
 }
+
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  .wireframe img {
+    width: 100%;
+    height: auto;
+    margin: 10px 0;
+  }
+}
