--- a/finalproject/styles/eventify.css
+++ b/finalproject/styles/eventify.css
@@ -85,21 +85,25 @@ h2{
 }
 
 @media screen and (max-width: 768px) {
-  body {
-    font-size: 16px;
-  }
+  
 
   h1 {
-    font-size: 20px;
+    font-size: 28px;
   }
 
   h2 {
-    font-size: 18px;
+    font-size: 20px;
   }
 
   .wireframe img {
     width: 100%;
     height: auto;
     margin: 10px 0;
+  }
+  .event {
+    font-size: 18px;
+  }
+  .css {
+    font-size: 16px;
   }
 }
