--- a/finalproject/styles/eventify.css
+++ b/finalproject/styles/eventify.css
@@ -13,7 +13,7 @@ body {
 }
 
 h1, h2 {
-  color: #3498db;
+  color: #2C3E50;
 }
 
 h1 {
@@ -63,7 +63,7 @@ header {
 
 .site {
     
-        color: #8000FF;
+        color: #2F4F7F;
 
 }
 
