--- a/finalproject/styles/service.css
+++ b/finalproject/styles/service.css
@@ -73,15 +73,9 @@ nav a:hover {
     font-size: 1.2em;
 }
 
-.card-container {
+.gallery-container {
   position: relative;
-  overflow: hidden;
 }
-
-
-
-
-
 
 .card-gallery {
   display: flex;
@@ -89,6 +83,27 @@ nav a:hover {
   scroll-behavior: smooth;
   padding: 10px;
 }
+.scroll-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.prev-button {
+  left: 0;
+}
+
+.next-button {
+  right: 0;
+}
+
+
 
 .card {
   min-width: 350px; /* Adjust the width as needed */
@@ -193,21 +208,21 @@ footer p {
   
     
 @media (max-width: 768px) {
-  .hero-content {
-    width: 80%;
+
+
+  header {
+    display: flex;
+    padding: 10px;
   }
 
-  .hero-content h1 {
-    font-size: 24px;
-  }
-
-  .hero-content p {
+  header h1 {
     font-size: 16px;
+    padding-bottom: 5px;
   }
 
-  .join-link {
-    padding: 8px 16px;
-    font-size: 14px;
+  .favicon {
+    width: 40px;
+    height: 30px;
   }
 
       .nav-links {
@@ -235,19 +250,19 @@ footer p {
     display: block;
   }
 
-
- 
-    h1 {
-        font-size: 22px;
-
-    
+ .scroll-button {
+    padding: 5px;
   }
+
+
     
 .grid-view {
     display: block;
 }
 
-
+#events {
+  display: block;
+}
 
 
     h3 {
@@ -256,8 +271,9 @@ footer p {
       
       
     footer p {
-      font-size: 24px;
-    }
+    font-size: 1em;
+    padding-top: 10px;
+  }
       .footer-container {
         display: flex;
         width: 100%;
@@ -266,20 +282,11 @@ footer p {
           font-size: 1rem;
       }
 
-      .facebook, .twitter, .instagram {
-        width: 40px;
-        height: 40px;
-      }
      
     
-    
-      .both-container {
-        display: block;
-      }
-
-
-      .footer-c {
-        padding-left: 10px;
+    .facebook, .twitter, .instagram {
+        width: 30px;
+        height: 20px;
       }
       
     .footer-messages {
