--- a/finalproject/styles/service.css
+++ b/finalproject/styles/service.css
@@ -212,8 +212,15 @@ footer p {
 
 
   header h1 {
-    font-size: 16px;
-    padding-bottom: 5px;
+    font-size: 14px;
+  }
+
+   header {
+    display: flex;
+        height: 300px;
+    }
+     ul li {
+    font-size: 14px;
   }
 
   .favicon {
