--- a/finalproject/styles/home.css
+++ b/finalproject/styles/home.css
@@ -250,15 +250,17 @@ footer p {
   }
    header {
     display: flex;
-        height: 300px;
+        height: 150px;
     }
      ul li {
     font-size: 14px;
+    margin: 5px;
   }
 
   .favicon {
     width: 40px;
     height: 30px;
+    margin: 10px;
   }
    .nav-links {
         display: none;
@@ -306,7 +308,7 @@ footer p {
   }
 
   .social {
-
+    display: block;
     margin-top: 5px;
     padding: 10px;
   }
@@ -337,10 +339,25 @@ footer p {
   display: block;
   margin: 20px;
   padding: 10px;
+  gap: 20px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid darkcyan;
+  align-items: center;
+  justify-items: center;
+  background-color: #f7f7f7;
 
 }
- 
 
+.four-view p{
+  margin: 10px;
+}
+
+ 
+.footer-c{
+      text-align: center;
+}
+    
     
 .grid-view {
     display: block;
