--- a/finalproject/styles/service.css
+++ b/finalproject/styles/service.css
@@ -205,7 +205,9 @@ footer p {
     text-align: center;
 }
  
-  
+  .footer-c{
+      text-align: center;
+}
     
 @media (max-width: 768px) {
 
@@ -217,13 +219,16 @@ footer p {
 
    header {
     display: flex;
-        height: 300px;
+        height: 150px;
     }
      ul li {
     font-size: 14px;
+        margin: 5px;
+
   }
 
   .favicon {
+    margin: 10px;
     width: 40px;
     height: 30px;
   }
@@ -278,7 +283,7 @@ footer p {
   }
 
   .social {
-
+    display: block;
     margin-top: 5px;
     padding: 10px;
   }
