--- a/finalproject/styles/service.css
+++ b/finalproject/styles/service.css
@@ -218,8 +218,10 @@ footer p {
   }
 
    header {
-    display: flex;
-        height: 150px;
+    flex-direction: column;
+    padding: 10px;
+
+   
     }
      ul li {
     font-size: 14px;
