--- a/finalproject/styles/service.css
+++ b/finalproject/styles/service.css
@@ -6,9 +6,10 @@
 
 body {
     background-color: #ffffff;
-    font-family: Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
+
 }
 
 
@@ -198,6 +199,10 @@ footer p {
     font-size: 1.30em;
     color: white;
     padding-top: 20px;
+}
+.footer-messages {
+      font-size: 1.30em;
+
 }
 
 #lastModified {
