--- a/finalproject/styles/service.css
+++ b/finalproject/styles/service.css
@@ -26,7 +26,7 @@ header {
 
 
   
-  header h1 {
+  header h3 {
     color:#fff ;
     font-size: 18px;
     font-family: 'Times New Roman', Times, serif;
@@ -328,7 +328,7 @@ footer p {
 
 
 
-  header h1 {
+  header h3 {
     font-size: 14px;
   }
 
@@ -350,30 +350,35 @@ footer p {
     height: 30px;
   }
 
-      .nav-links {
-        display: none;
-        position: absolute;
-        left: 0;
-        background-color: #333;
-        width: 100%;
-        padding: 20px;
-      }
-    
-    
 
-  .navbar {
+.hamburger {
     display: block;
-    padding: 1rem;
   }
 
-  .hamburger {
+  .nav-links {
+    display: none;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    padding: 20px;
+  }
+
+  .nav-links.active {
     display: block;
-    cursor: pointer;
   }
 
   .nav-links ul {
-    display: block;
+    flex-direction: column;
   }
+
+  .nav-links li {
+    margin-bottom: 20px;
+  }
+
+
+      
 
  .scroll-button {
     padding: 5px;
