--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -2,6 +2,9 @@
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
+    padding: 20px;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .gallery-card {
@@ -53,11 +56,27 @@ button {
     .gallery {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .gallery-card {
+        grid-template-areas: 
+        "image title"
+        "image address"
+        "description description"
+        "button button";
+        grid-template-columns: 1fr 2fr;
+    }
 }
 
 @media (min-width: 1025px) {
     .gallery {
         grid-template-columns: repeat(3, 1fr);
+    }
+    .gallery-card {
+        grid-template-areas: 
+        "image image title"
+        "image image address"
+        "description description description"
+        "button button button";
     }
 }
 
@@ -104,6 +123,19 @@ button {
 }
 }
 
+@media (max-width: 320px) {
+  .nav-links {
+    top: 40px;
+    padding: 10px;
+  }
+
+  .nav-links li {
+    margin-bottom: 10px;
+  }
+}
+
+
 .show-menu {
   display: block;
 }
+
