--- a/finalproject/styles/eventify.css
+++ b/finalproject/styles/eventify.css
@@ -351,6 +351,10 @@ footer p {
     font-size: 18px;
   }
 
+  .grid-section {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   .grid-view {
     grid-template-columns: repeat(1, 1fr);
   }
