--- a/finalproject/styles/eventify.css
+++ b/finalproject/styles/eventify.css
@@ -294,8 +294,8 @@ footer p {
     font-size: 16px;
   }
 
-hi{
-  font-size: 16px;
+h1{
+  font-size: 15px;
 }
   header h3 {
     font-size: 14px;
