--- a/finalproject/styles/eventify.css
+++ b/finalproject/styles/eventify.css
@@ -294,9 +294,10 @@ footer p {
     font-size: 16px;
   }
 
-h1{
-  font-size: 12px;
-}
+.hero h1 {
+    font-size: 16px;
+  }
+
   header h3 {
     font-size: 14px;
     padding-bottom: 5px;
