--- a/finalproject/styles/eventify.css
+++ b/finalproject/styles/eventify.css
@@ -297,7 +297,10 @@ footer p {
 .hero h1 {
     font-size: 16px;
   }
-
+.hero h1 {
+  position: absolute;
+  top: 20%;
+  left: 50%;
   header h3 {
     font-size: 14px;
     padding-bottom: 5px;
