--- a/finalproject/styles/home.css
+++ b/finalproject/styles/home.css
@@ -350,7 +350,7 @@ footer p {
 
   .facebook .twitter .instagram {
     width: 30px;
-    height: 20px;
+    height: auto;
   }
   .eventpix {
     width: 40px;
@@ -400,7 +400,7 @@ footer p {
     padding: 10px;
 } 
 
-h1 {
+.hero h1 {
   font-size: 14px;
   margin-bottom: 30px;
   
