--- a/finalproject/styles/service.css
+++ b/finalproject/styles/service.css
@@ -111,7 +111,7 @@ h2{
     font-size: 23px;
     text-align: center;
     margin: 10px;
-    color: #3498db;
+    color: #337ab7;
 }
 
 .he {
@@ -120,7 +120,7 @@ h2{
     font-size: 15px;
     text-align: center;
     margin: 10px;
-    color: #3498db;
+    color: #337ab7;
 
  }
 
@@ -219,7 +219,7 @@ display: none;
 
 
 .modal {
-  color: #00698f;
+  color: #3498db;
   font-size: 16px;
 }
 
@@ -412,7 +412,7 @@ footer p {
 
   .facebook .twitter .instagram {
     width: 30px;
-    height: 20px;
+    height: auto;
   }
   .eventpix {
     width: 40px;
