--- a/finalproject/styles/home.css
+++ b/finalproject/styles/home.css
@@ -173,10 +173,10 @@ h2 {
   max-width: 1400px;
   margin: 20px auto;
   padding: 20px;
-  border: 1px solid #F7F7F7;
+  color:  #F7F7F7;
   align-items: center;
   justify-items: center;
-  background-color: #FFFFFF;
+  background-color: #005152;
 
 }
 text{
